--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic (>=2.12.5,<3.0.0)",
     "ollama (>=0.6.1,<0.7.0)",
     "python-multipart (>=0.0.21,<0.0.22)",
-    "pypdf (>=6.6.0,<7.0.0)"
+    "pypdf (>=6.6.0,<7.0.0)",
+    "pytest (>=9.0.2,<10.0.0)"
 ]
 
 [tool.poetry]
