--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Michael Sambou",email = "me@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.14,<3.15"
 dependencies = [
     "fastapi (>=0.128.0,<0.129.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
@@ -14,7 +14,11 @@ dependencies = [
     "ollama (>=0.6.1,<0.7.0)",
     "python-multipart (>=0.0.21,<0.0.22)",
     "pypdf (>=6.6.0,<7.0.0)",
-    "pytest (>=9.0.2,<10.0.0)"
+    "pytest (>=9.0.2,<10.0.0)",
+    "torch (>=2.9.1,<3.0.0)",
+    "sentence-transformers (>=5.2.0,<6.0.0)",
+    "numpy (>=2.4.1,<3.0.0)",
+    "faiss-cpu (>=1.13.2,<2.0.0)"
 ]
 
 [tool.poetry]
